--- a/public/styling/index.css
+++ b/public/styling/index.css
@@ -1,3 +1,123 @@
+.poppins-thin {
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+}
+
+.poppins-extralight {
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+}
+
+.poppins-light {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.poppins-regular {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.poppins-medium {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.poppins-semibold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.poppins-bold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.poppins-extrabold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+}
+
+.poppins-black {
+    font-family: "Poppins", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+}
+
+.poppins-thin-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+}
+
+.poppins-extralight-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-style: italic;
+}
+
+.poppins-light-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.poppins-regular-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.poppins-medium-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+}
+
+.poppins-semibold-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: italic;
+}
+
+.poppins-bold-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+}
+
+.poppins-extrabold-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 800;
+    font-style: italic;
+}
+
+.poppins-black-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+}
+
+
+
+
+* {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
+
+body, header, main, footer {
+    background-color: #777;
+}
+
 nav {
     max-width: 95%;
     margin: 0 auto;
@@ -5,7 +125,7 @@ nav {
     grid-template-columns: 1fr 2fr 1fr;
     align-items: center;
     gap: 10px;
-    padding-bottom: 5vh;
+    padding-bottom: 2vh;
 }
 
 nav h1 {
@@ -21,6 +141,7 @@ nav a {
 }
 
 
+
 main {
     display: flex;
     flex-direction: row;
@@ -29,10 +150,11 @@ main {
 .left_side {
     flex: 1;
     padding: 0 2vw;
+    background-color: #555;
 }
 
 .right_side {
-    flex: 4;
+    flex: 6;
 }
 
 .left_side div {
@@ -40,6 +162,31 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 1vh 0;
+    padding: 2vh 0;
+    background-color: #555;
+    line-height: 30px;
+}
 
+
+#login_button {
+    background-color: #333;
+    color: white;
+    border: 2px solid #555;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background 0.3s;
+    text-decoration: none;
+    display: inline-block;
+}
+
+/* Hover effect */
+#login_button:hover {
+    background-color: #555;
+    border-color: #777;
+    color: lightblue;
+}
+
+
+#searchVideo {
+    background-color: grey;
 }
