--- a/public/styling/index.css
+++ b/public/styling/index.css
@@ -114,8 +114,11 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body, header, main, footer {
-    background-color: #777;
+body,
+header,
+main,
+footer {
+    background-color: #666;
 }
 
 nav {
@@ -150,20 +153,25 @@ main {
 .left_side {
     flex: 1;
     padding: 0 2vw;
-    background-color: #555;
+    background-color: #333;
+    border-radius: 14px;
+    margin: 0 0.5vw;
+
 }
 
 .right_side {
     flex: 6;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding-left: 6vw;
+    padding-top: 5vh;
 }
 
 .left_side div {
-
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 2vh 0;
-    background-color: #555;
     line-height: 30px;
 }
 
@@ -188,5 +196,19 @@ main {
 
 
 #searchVideo {
-    background-color: grey;
+    background-color: #333;
+    padding: 1vh 8vw;
+    border-radius: 12px;
+    text-align: center;
 }
+
+#searchSubmit {
+    border: none;
+    background: none;
+    font-size: 1.2rem;
+}
+
+h2{
+    margin: 0.5vh 0;
+}
+
