--- a/public/styling/header.css
+++ b/public/styling/header.css
@@ -1,5 +1,4 @@
 nav {
-    height: 6vh;
     max-width: 95%;
     margin: 0 auto;
     display: grid;
@@ -19,6 +18,10 @@ nav .search-form {
 
 nav a {
     justify-self: end;
+}
+
+form {
+    display: flex;
 }
 
 #login_button {
