--- a/public/styling/crud.css
+++ b/public/styling/crud.css
@@ -1,8 +1,3 @@
-html {
-    background-color: var(--colors-background-dark);
-    color: var(--colors-text-dark);
-}
-
 section {
     display: flex;
     justify-content: center;
@@ -20,4 +15,12 @@ div {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+input {
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+    color: #000;
+    padding: 5px;
 }
