--- a/public/styling/crud.css
+++ b/public/styling/crud.css
@@ -24,3 +24,18 @@ input {
     color: #000;
     padding: 5px;
 }
+
+button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--colors-background-gray);
+    color: var(--colors-text-light);
+    border-radius: 10px;
+    padding: 5px;
+    transition: ease-in-out 0.05s;
+}
+
+button:hover {
+    color: var(--colors-text-hover);
+}
