--- a/public/styling/header.css
+++ b/public/styling/header.css
@@ -2,6 +2,10 @@ header {
     box-shadow: 0 1px 5px 0 black;
 }
 
+a {
+    text-decoration: none;
+}
+
 nav {
     max-width: 95%;
     margin: 0 auto;
