--- a/public/styling/channel.css
+++ b/public/styling/channel.css
@@ -38,5 +38,29 @@ body{
     height: 100vh;
     width: 60vw;
     max-height: 100vh;
+}
 
+.imageBanner {
+    scale: 100%;
+}
+
+.banner {
+    max-height: 423px;
+    max-width: 1500px;
+    overflow: hidden;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.profilePicture {
+    margin: 40px 0px 0px 20px;
+}
+
+.profile{
+    display: flex;
+    flex-direction: column;
+}
+
+.channelName {
+    padding: 30px 0px 0px 20px;
 }
