--- a/public/styling/channel.css
+++ b/public/styling/channel.css
@@ -15,12 +15,21 @@ body{
 
 .channelDetails {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: #2f2f2f;
+    justify-content: center;
 }
 
+.amounts{
+    display: flex;
+    flex-direction: column;
+}
 .emptyContainer{
-    width: 20vw;
+    width: 5vw;
+}
+
+.description{
+    margin-top: 10px;
 }
 
 .divContainer {
@@ -54,6 +63,9 @@ body{
 
 .profilePicture {
     margin: 40px 0px 0px 20px;
+    padding-right: 30px;
+    max-height: fit-content;
+    max-width: fit-content;
 }
 
 .profile{
@@ -61,6 +73,16 @@ body{
     flex-direction: column;
 }
 
-.channelName {
-    padding: 30px 0px 0px 20px;
+.lijntje{
+    background-color: #414141;
+    height: 10px;
+    width: auto;
+    margin: 30px 0px 40px 0px;
+}
+
+.video1{
+
+    background-color: #414141 ;
+    width: 400px;
+    height: 250px;
 }
