--- a/public/styling/video.css
+++ b/public/styling/video.css
@@ -5,3 +5,15 @@
     padding: 5vh 0;
 }
 
+*{
+    margin: 0;
+}
+
+#flexDezeShitNaarBeneden
+{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 80%;
+    margin: 0 auto;
+}
