--- a/public/styling/header.css
+++ b/public/styling/header.css
@@ -24,15 +24,21 @@ nav .search-form {
     justify-self: center;
 }
 
-nav a {
+nav .nav-actions {
+    display: flex;
+    flex-direction: row;
     justify-self: end;
+    display: flex;
+    gap: 12px;
+    align-items: center;
 }
 
 form {
     display: flex;
 }
 
-#login_button {
+
+#login_button, #admin-dashboard {
     background-color: #333;
     color: white;
     border: 2px solid #555;
@@ -43,8 +49,8 @@ form {
     display: inline-block;
 }
 
-/* Hover effect */
-#login_button:hover {
+
+#login_button:hover, #admin-dashboard:hover {
     color: var(--colors-text-hover);
 }
 
