--- a/public/styling/upload.css
+++ b/public/styling/upload.css
@@ -1,3 +1,8 @@
+/* Highlight selected thumbnail slot */
+.selected-thumb-slot {
+  outline: 3px solid #2196F3;
+  box-shadow: 0 0 8px #2196F3;
+}
 .upload-col-left input[type="text"] {
   width: 100%;
   box-sizing: border-box;
