--- a/public/styling/admin-account-dashboard.css
+++ b/public/styling/admin-account-dashboard.css
@@ -192,17 +192,17 @@ button:hover {
     justify-content: center;
 }
 
-.search-bar {
-    margin-top: 25px;
+.search-user-bar {
+    margin: 32px 24px 0 24px;
 }
 
-.search-bar form {
+.search-user-bar form {
     display: flex;
     gap: 16px;
     align-items: center;
 }
 
-.search-bar input[type="text"] {
+.search-user-bar input[type="text"] {
     border: 1px solid var(--border);
     border-radius: 14px;
     padding: 12px 14px;
@@ -210,11 +210,11 @@ button:hover {
     font-size: 1rem;
 }
 
-.search-bar input[type="text"]:focus {
+.search-user-bar input[type="text"]:focus {
     border-color: var(--primary);
 }
 
-.search-bar button {
+.search-user-bar button {
     background: var(--colors-background-gray);
     color: #fff;
     border: #000 solid 1px;
@@ -226,7 +226,7 @@ button:hover {
     transition: ease-in-out 0.05s;
 }
 
-.search-bar button:hover {
+.search-user-bar button:hover {
     color: var(--colors-text-hover);
 }
 
